--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
-  "devDependencies": {
-    "htmlhint": "^1.1.4",
-    "stylelint": "^14.16.0",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^29.0.0",
-    "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.3.0"
+  "name": "layout-designer-project-59",
+  "description": "The third project of the profession of layout designer Hexlet",
+  "version": "1.0.0",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xxphantom/layout-designer-project-59.git"
+  },
+  "author": "Dmitriy Gerasimov",
+  "license": "ISC",
+  "homepage": "https://github.com/xxphantom/layout-designer-project-59#readme",
+  "devDependencies": {
     "bootstrap": "^5.2.3",
+    "browser-sync": "^2.27.10",
     "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-svg-sprite": "^2.0.1",
+    "htmlhint": "^1.1.4",
+    "sass": "^1.56.2",
+    "stylelint": "^14.2.0",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.1.0",
     "surge": "^0.23.1"
   }
 }
